<resources>
    <string name="app_name">Tricky Tripper</string>
    <string name="spinner_null_value_default"></string>
    <string name="symbol_arrow_down">∨</string>
    <string name="defaultX">XX</string>
    <string name="default_blank"></string>
    <string name="common_button_cancel">Cancel</string>
    <string name="common_button_yes">Yes</string>
    <string name="common_button_no">No</string>
    <string name="common_button_ok">OK</string>
    <string name="common_button_create">Create</string>
    <string name="common_button_save">Save</string>
    <string name="common_button_delete">Delete</string>
    <string name="common_button_edit">Edit</string>
    <string name="common_label_total_amount">Total:</string>
    <string name="common_label_inactive_addon">[Inactive]</string>
    <string name="common_toast_currency_not_part_of_this_release">The currency selection is not part of this release.</string>
    <string name="progress_dialog_text_loading">Loading …</string>
    <string name="activity_label_participants">Travelers</string>
    <string name="activity_label_report">Report</string>
    <string name="activity_label_payments">Payments</string>
    <string name="activity_label_create_payment">Create payment</string>
    <string name="activity_label_edit_payment">Edit payment</string>
    <string name="label_enum_payment_category_housing">Housing</string>
    <string name="label_enum_payment_category_food">Food</string>
    <string name="label_enum_payment_category_beverages">Beverages</string>
    <string name="label_enum_payment_category_gas">Gasoline</string>
    <string name="label_enum_payment_category_public_transport">Public transport</string>
    <string name="label_enum_payment_category_other">Various</string>
    <string name="label_enum_payment_category_rentals">Rentals</string>
    <string name="label_enum_payment_category_culture">Culture</string>
    <string name="label_enum_payment_category_entrance_fee">Entrance Fee</string>
    <string name="label_enum_payment_category_money_transfer">Money transfer</string>
    <string name="label_enum_select_rates_all">&#8230; all</string>
    <string name="label_enum_select_rates_none">&#8230; none</string>
    <string name="label_enum_select_rates_all_imported">&#8230; all imported</string>
    <string name="label_enum_select_rates_all_custom">&#8230; all custom</string>
    <string name="option_help">Help &amp; Info</string>
    <string name="option_settings">Settings</string>
    <string name="option_export">Export</string>
    <string name="option_delete">Delete</string>
    <string name="option_create">Create</string>
    <string name="option_import">Import</string>
    <string name="option_option_create_exchange_rate_for_source">Create matching rate</string>
    <string name="participant_tab_row_view_label_spent">Spent:</string>
    <string name="participant_tab_row_view_label_paid">Paid:</string>
    <string name="participant_tab_blank_list_notification">No travelers yet. \n\n\n\nCreate new travelers by long-tapping on the traveler tab header or choose \'Create\' from the menu.</string>
    <string name="currencyCalculatorViewTextViewHeading">Exchange Calculator</string>
    <string name="currencyCalculatorViewTextViewLabelSource">Source</string>
    <string name="currencyCalculatorViewTextViewLabelTarget">Result</string>
    <string name="currencyCalculatorViewTextViewHeadLabelRate">Rate</string>
    <string name="currencyCalculatorViewTextViewHeadLabelRateSetting">Rate setting</string>
    <string name="currencyCalculatorViewSpinnerPrompt">Select a stored exchange rate</string>
    <string name="currencyCalculatorViewTextViewHeadLabelOptions">Options</string>
    <string name="currencyCalculatorViewCheckboxSaveNewRate">Save newly entered exchange rate</string>
    <string name="currencyCalculatorViewImageViewDescription">Indicates the exchange calculation direction</string>
    <string name="currencyCalculatorViewButtonUseResult">Use result</string>
    <string name="currencyCalculatorViewNoMatchingRatesAvailable">No matching exchange rates available.</string>
    <string name="currencyCalculatorViewDefaultDescriptionAutoSaveExchangeRate">Auto-saved exchange rate</string>
    <string name="currencyCalculatorViewToastResultExceedsLimit">The currency calculator result exceeds the input limit.</string>
    <string name="exchangeRate_common_import_description_prefix">Imported</string>
    <string name="currency_selection_view_heading">Select currency</string>
    <string name="currency_selection_view_instruction_exchange_rate_calc">Select the source currency for your money exchange calculation to</string>
    <string name="currency_selection_view_instruction_new_exchange_rate">Select a currency for your new exchange rate:</string>
    <string name="currency_selection_view_instruction_new_exchange_rate_label_left">Left side:</string>
    <string name="currency_selection_view_instruction_new_exchange_rate_label_right">Right side:</string>
    <string name="currency_selection_view_instruction_new_exchange_rate_label_to_be_selected">to be selected</string>
    <string name="currency_selection_view_instruction_heading">Currencies (ordered by usage)</string>
    <string name="currency_selection_view_instruction_group_label_used_and_matching">&#8230; matching, in rates used</string>
    <string name="currency_selection_view_instruction_group_label_used_in_rates_matching">&#8230; matching, in rates</string>
    <string name="currency_selection_view_instruction_group_label_used_unmatched">&#8230; in rates used</string>
    <string name="currency_selection_view_instruction_group_label_used_in_rates_unmatched">&#8230; in rates</string>
    <string name="currency_selection_view_instruction_group_label_in_trips">&#8230; in trips</string>
    <string name="currency_selection_view_instruction_group_label_else">All currencies</string>
    <string name="manageExchangeRatesViewTextViewHeading">Exchange Rates</string>
    <string name="manageExchangeRatesViewDeleteConfirmation">Are you sure you want to delete the selected exchange rate?</string>
    <string name="manageExchangeRatesViewBlankListNotification">No exchange rates yet. \n\n\n\nImport or create exchange rates with the equivalent functions from the menu.</string>
    <string name="importExchangeRatesViewTextViewHeading">Import Exchange Rates</string>
    <string name="importExchangeRatesViewOptions">Options</string>
    <string name="importExchangeRatesViewCheckboxLabelNewRateOnValueChange">Create new rate on value change</string>
    <string name="importExchangeRatesViewListViewLabel">Select all exchange relevant currencies</string>
    <string name="importExchangeRatesViewButtonExecute">Do import</string>
    <string name="importExchangeRatesViewCancelImportToast">The import has been canceled.</string>
    <string name="importExchangeRatesViewProgressBarMessage">Importing exchange rates &#8230;</string>
    <string name="importExchangeRatesViewSelectionPrefix">Selected:</string>
    <string name="importExchangeRatesViewPreconToastRequiresOnlineConnection">The import of exchange rates requires an online connection.</string>
    <string name="importExchangeRatesViewPreconToastNotAlive1">Exchange rates cannot be obtained via internet for the following currencies:</string>
    <string name="importExchangeRatesViewPreconToastNotAlive2">Enter a rate by hand or create a new exchange rate by choosing \'Create matching rate\' from the menu. </string>
    <string name="deleteExchangeRatesViewTextViewHeading">Delete Exchange Rates</string>
    <string name="deleteExchangeRatesViewButtonLabelPositive">Delete selection</string>
    <string name="deleteExchangeRatesViewSpinnerPrompt">Select &#8230;</string>
    <string name="deleteExchangeRatesViewLabelSelectionOptions">Change selection &#8230;</string>
    <string name="deleteExchangeRatesViewLabelSelectionOptionsDesc">Opens selection options</string>
    <string name="deleteExchangeRatesViewListViewLabel">Select all rates to be deleted</string>
    <string name="deleteExchangeRatesViewDeleteConfirmation">Are you sure you want to delete the @@1@@ selected exchange rate(s)?</string>
    <string name="editExchangeRateViewHeadingEdit">Edit Exchange Rate</string>
    <string name="editExchangeRateViewHeadingCreate">Create Exchange Rate</string>
    <string name="editExchangeRateViewLabelRate">Rate</string>
    <string name="editExchangeRateViewLabelInputDescription">Description</string>
    <string name="editExchangeRateViewMsgSaveDenialDuplicate">An exchange rate with the description entered already exists. Please modify your input.</string>
    <string name="exportViewTextViewHeading">Export</string>
    <string name="exportViewTextViewSubHeadingContent">What?</string>
    <string name="exportViewCheckboxContentPayments">Payments</string>
    <string name="exportViewCheckboxContentTransfers">Money transfers</string>
    <string name="exportViewCheckboxContentSpendingReport">Spendings</string>
    <string name="exportViewCheckboxContentOwingDebts">Owing debts</string>
    <string name="exportViewTextViewSubHeadingScope">Extent?</string>
    <string name="exportViewTextViewSubHeadingFormat">Format?</string>
    <string name="exportViewCheckboxFormatCsv">CSV (for Excel, etc.)</string>
    <string name="exportViewCheckboxFormatHtml">HTML</string>
    <string name="exportViewCheckboxFormatTxt">TXT</string>
    <string name="exportViewCheckboxSeparateFilesForIndividuals">Separate file(s) for every traveler</string>
    <string name="exportViewCheckboxShowTripSumOnIndividualSpendingReport">Spendings: Show full trip sums on individual files</string>
    <string name="exportViewSpinnerPromptScope">Choose traveler for export</string>
    <string name="exportViewButtonExecuteExport">Do export</string>
    <string name="exportViewIntentChooserHeader">Choose service to export to</string>
    <string name="exportViewTextViewSubHeadingChannel">Output trail?</string>
    <string name="exportViewSpinnerPromptChannel">Choose your output trail</string>
    <string name="exportViewSpinnerNotAvailable">not available</string>
    <string name="exportOutputChannelEnumSave2Sd">Save to SD card</string>
    <string name="exportOutputChannelMail">Mail</string>
    <string name="exportOutputChannelDropbox">Dropbox</string>
    <string name="exportOutputChannelEvernote">Evernote</string>
    <string name="save2SdReceiverLabel">Save to storage</string>
    <string name="save2SdReceiverHeading">Export: Choose directory</string>
    <string name="save2SdReceiverSelect">Choose</string>
    <string name="save2SdReceiverProgressHeading">Saving export to storage:</string>
    <string name="save2SdReceiverResultNothingSaved">Nothing exported to telephone</string>
    <string name="save2SdReceiverResultSavedPrefix">Successfully exported</string>
    <string name="save2SdReceiverResultSavedPostfix">to storage</string>
    <string name="save2SdReceiverResultSavedFiles">files</string>
    <string name="save2SdReceiverResultSavedFile">file</string>
    <string name="fileExportPrefix">TTE</string>
    <string name="money_transfer_view_heading">Money transfer</string>
    <string name="money_transfer_view_label_from">from:</string>
    <string name="money_transfer_view_button_transfer">Transfer</string>
    <string name="money_transfer_list_view_label_name">to:</string>
    <string name="money_transfer_list_view_label_amount">Amount</string>
    <string name="money_transfer_list_view_label_due">&lt; Due</string>
    <string name="edit_trip_view_label_name_input">Name:</string>
    <string name="edit_trip_view_label_base_currency">Base currency:</string>
    <string name="edit_trip_view_create_positive_button">Create</string>
    <string name="edit_trip_view_create_positive_button_and_load">Create &amp; load</string>
    <string name="edit_trip_view_create_negative_button">Cancel</string>
</resources>