<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/option_create_participant"
        android:title="@string/option_create"/>

    <item
        android:id="@+id/option_create_exchange_rate"
        android:title="@string/option_create"/>

    <item
        android:id="@+id/option_create_trip"
        android:title="@string/option_create"/>

    <item
        android:id="@+id/option_delete"
        android:title="@string/option_delete"/>

    <item
        android:id="@+id/option_import"
        android:title="@string/option_import"/>

    <item
        android:id="@+id/option_export"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/option_export"/>

    <item
        android:id="@+id/option_preferences"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/option_settings"/>

    <item
        android:id="@+id/option_help"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/option_help"/>

</menu>