<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/money_transfer_view_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/money_transfer_view_heading"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/money_transfer_view_label_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/money_transfer_view_label_from" />

        <TextView
            android:id="@+id/money_transfer_view_output_participant_from"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/money_transfer_view_label_from"
            android:gravity="right"
            android:paddingBottom="20dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </RelativeLayout>

    <!-- This scolling shit only scales properly in conjunction with linear layout when the bottom button bar is intended. -->

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical" >

        <TableLayout
            android:id="@+id/money_transfer_view_table_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shrinkColumns="0"
            android:stretchColumns="0"             >

            <TableRow >

                <TextView
                    android:id="@+id/money_transfer_list_view_label_name"
                    android:gravity="left"
                    android:text="@string/money_transfer_list_view_label_name" />

                <TextView
                    android:id="@+id/money_transfer_list_view_label_amount"
                    android:layout_column="2"
                    android:gravity="center"
                    android:text="@string/money_transfer_list_view_label_amount" />

                <TextView
                    android:id="@+id/money_transfer_list_view_label_due"
                    android:layout_column="3"
                    android:gravity="center"
                    android:text="@string/money_transfer_list_view_label_due" />
            </TableRow>

            <View
                android:layout_height="2dip"
                android:background="#FF909090" />

            <View
                android:layout_height="5dp"
                android:background="@android:color/black" />
        </TableLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/money_transfer_view_label_total_transfer_amount"
            style="@style/LargeFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:padding="3dip"
            android:text="@string/common_label_total_amount" />

        <TextView
            android:id="@+id/money_transfer_view_output_total_transfer_amount"
            style="@style/LargeFont"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:padding="3dip" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/footer"
        style="@android:style/ButtonBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/money_transfer_view_button_transfer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="transfer"
            android:text="@string/money_transfer_view_button_transfer" />

        <Button
            android:id="@+id/money_transfer_view_button_cancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="cancel"
            android:text="@string/common_button_cancel" />
    </LinearLayout>

</LinearLayout>